apps/kitchenowl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchenowl
  annotations:
    argocd.argoproj.io/sync-options: Replace=true
  labels:
    app: kitchenowl
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: kitchenowl
  template:
    metadata:
      labels:
        app: kitchenowl
    spec:
      containers:
        - name: kitchenowl
          image: tombursch/kitchenowl@sha256:bd821a41b8cb27fd7fcf429acd1fc67e9f889485a2cd1193d68c2d804a8e1bef
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: kitchenowl-data
