apps/kitchenowl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitchenowl
spec:
  selector:
    app: kitchenowl
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: http
